--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.0.2"
+    },
+    "dependencies": {
+        "imagesloaded": "^4.1.4",
+        "masonry-layout": "^4.2.2"
     }
 }
